main/default/objects/Expense__c/fields/Amount_Per_Volume__c.field-meta.xml
<CustomField>
    <fullName>Amount_Per_Volume__c</fullName>
    <description>Conditionally required if type = &#39;Fuel&#39;</description>
    <label>Amount Per Volume</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>