main/default/objects/Expense__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The business, store or vehicle shop for this expense</description>
    <inlineHelpText>The business, store or vehicle shop for this expense</inlineHelpText>
    <label>Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>