main/default/objects/Expense__c/fields/Business_Mechanic__c.field-meta.xml
<CustomField>
    <fullName>Business_Mechanic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The business, store or vehicle shop for this expense</description>
    <inlineHelpText>The business, store or vehicle shop for this expense</inlineHelpText>
    <label>Business/Mechanic</label>
    <referenceTo>Business_Mechanic__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>