main/default/objects/Expense__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The discount amount for the expense</description>
    <inlineHelpText>The discount amount for the expense</inlineHelpText>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>