main/default/objects/Expense__c/fields/Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The date for the expense</description>
    <label>Expense Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>