main/default/objects/Expense__c/fields/Mechanic__c.field-meta.xml
<CustomField>
    <fullName>Mechanic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The mechanic who serviced the vehicle</description>
    <inlineHelpText>The mechanic who serviced the vehicle</inlineHelpText>
    <label>Mechanic</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>