main/default/objects/Expense__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>the expense notes</description>
    <inlineHelpText>the expense notes</inlineHelpText>
    <label>Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>