main/default/objects/Expense__c/fields/Octane_Rating__c.field-meta.xml
<CustomField>
    <fullName>Octane_Rating__c</fullName>
    <description>Conditionally required if type = &#39;Fuel&#39;

Dependent on Type

If Gas
- 91
- 95
- 99</description>
    <label>Octane Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>91</fullName>
            </value>
            <value>
                <fullName>95</fullName>
            </value>
            <value>
                <fullName>99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>