main/default/objects/Expense__c/fields/Octane_Type__c.field-meta.xml
<CustomField>
    <fullName>Octane_Type__c</fullName>
    <description>The fuel octane</description>
    <inlineHelpText>the fuel octane</inlineHelpText>
    <label>Octane Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>91</fullName>
            </value>
            <value>
                <fullName>95</fullName>
            </value>
            <value>
                <fullName>99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>