main/default/objects/Expense__c/fields/Odometer__c.field-meta.xml
<CustomField>
    <fullName>Odometer__c</fullName>
    <description>The odometer value during fuel fillup</description>
    <inlineHelpText>The odometer value during fuel fillup</inlineHelpText>
    <label>Odometer</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>