main/default/objects/Expense__c/fields/Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Reading__c</fullName>
    <description>Conditionally required if type = &#39;Fuel&#39; and &#39;Service&#39;</description>
    <label>Odometer Reading</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>