main/default/objects/Expense__c/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <description>Conditionally required if type = &#39;Fuel&#39;</description>
    <label>Total Volume</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>