main/default/objects/Expense__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <description>The fuel volume filled up</description>
    <inlineHelpText>The fuel volume filled up</inlineHelpText>
    <label>Volume</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>