main/default/objects/Expense__c/validationRules/Require_Amount_Per_Volume_For_Fuel_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Amount_Per_Volume_For_Fuel_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Permission.Skip_Validation_Rules),
ISBLANK(Amount_Per_Volume__c),
ISPICKVAL(Type__c,&#39;Fuel&#39;) 
)</errorConditionFormula>
    <errorDisplayField>Amount_Per_Volume__c</errorDisplayField>
    <errorMessage>Amount per Volume is required for Fuel epense</errorMessage>
</ValidationRule>