main/default/objects/Expense__c/validationRules/Require_Volume_for_Fuel_Expense.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Volume_for_Fuel_Expense</fullName>
    <active>true</active>
    <description>Require Volume input when Expense Type is Fuel</description>
    <errorConditionFormula>AND(
NOT($Permission.Skip_Validation_Rules),
ISBLANK(Volume__c),
ISPICKVAL(Type__c,&#39;Fuel&#39;) 
)</errorConditionFormula>
    <errorDisplayField>Volume__c</errorDisplayField>
    <errorMessage>Volume is required for Fuel expense</errorMessage>
</ValidationRule>